--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -209,7 +209,7 @@
  artifact_sell_collector:0 "ขายให้นักสะสม"
  artifact_sell_collector_desc:0 "Put some of our minor artifacts up for auction to private collectors."
  artifact_sell_cooldown:0 "เวลาคูลดาวน์ $artifact_sell_collector$"
- artifact_arcane_deciphering:0 "Reverse-Engineer Arcane Technology"
+ artifact_arcane_deciphering:0 "เทคโนโลยี Arcane แบบวิศวกรรมย้อนกลับ"
  artifact_arcane_deciphering_desc:0 "Have some minor artifacts broken down and examined by our scientists, to see what insights they will yield for our own research."
  artifact_arcane_deciphering_effect:0 "Break down £minor_artifacts£Minor Artifacts for random technology bonuses. Gain progress in a random tech, gain research points or gain a temporary research speed bonus.\n\nเวลาคูลดาวน์: £time£ §Y720§!"
  feature_unlock_arcane_deciphering:0 "วิศวกรรมย้อนกลับศิลปวัตถุชั้นรอง"
@@ -219,7 +219,7 @@
  arcane_insight:0 "Arcane Insights"
  tech_arcane_deciphering:0 "การถอดรหัสที่ซ่อนเอาไว้"
  tech_arcane_deciphering_desc:0 "Various artifacts and technologies functioning by arcane means that cannot be understood or replicated... at least not by conventional science as it is known to us."
- artifact_proclaim_religious_finding:0 "Proclaim Religious Revelation"
+ artifact_proclaim_religious_finding:0 "ประกาศการเปิดเผยทางศาสนา"
  artifact_proclaim_religious_finding_desc:0 "The discovery of artifacts far predating our own civilization has given indisputable proof of our beliefs."
  proclaim_religious_finding:0 "Proclaimed Religious Revelation"
  artifact_celebrate_diversity:0 "เฉลิมฉลองความหลากหลาย"
@@ -229,38 +229,38 @@
  artifact_proclaim_superiority_desc:0 "Destroy minor artifacts to show disdain for civilizations better off dead."
  proclaim_superiority:0 "Apex of History"
  proclaim_superiority_desc:0 "We are the future of civilization, there is nothing we can learn from the past."
- artifact_find_military_applications:0 "Find Military Applications"
+ artifact_find_military_applications:0 "แสวงหาทางการทหาร"
  artifact_find_military_applications_desc:0 "Attempt to find military applications for minor artifacts."
  artifact_find_military_applications_effect:1 "Break down £minor_artifacts£Minor Artifacts for various military bonuses.\n\nPerforming this will prevent you from seeking peaceful applications for a time.\n\nเวลาคูลดาวน์: £time£ §Y900§!"
  artifact_find_military_applications_no_cooldown:0 "$TRIGGER_FAIL$§RCannot find more peaceful or military applications yet.§!"
- artifact_find_military_application_army:0 "Combat Drugs"
+ artifact_find_military_application_army:0 "ยาเพื่อการสู้รบ"
  artifact_find_military_application_army_desc:0 "Your soldiers are stronger, more aggressive, and terrifying, but a bit less careful."
- artifact_find_military_application_army_machine:0 "Modified Safety Thresholds"
+ artifact_find_military_application_army_machine:0 "แก้ไขเกณฑ์ความปลอดภัย"
  artifact_find_military_application_army_machine_desc:0 "Adjustments to the safety thresholds of your armies increases their damage potential at the cost of a minor loss in accuracy."
- artifact_find_military_application_shield_damage:0 "Harmonic Isolation"
+ artifact_find_military_application_shield_damage:0 "แยกโล่พลังงานออกจากกัน"
  artifact_find_military_application_shield_damage_desc:0 "Your ship weapons are tuned to deal additional damage to shields."
- artifact_find_military_application_armor_damage:0 "Weak Point Analysis"
+ artifact_find_military_application_armor_damage:0 "วิเคราะห์จุดอ่อน"
  artifact_find_military_application_armor_damage_desc:0 "Your ship weapons are able to exploit weaknesses, dealing additional damage to armor."
- artifact_find_applications_cooldown:0 "Minor Artifacts Study Cooldown"
- artifact_find_peaceful_applications:0 "Find Peaceful Applications"
+ artifact_find_applications_cooldown:0 "คูลดาวน์การศึกษาศิลปวัตถุชั้นรอง"
+ artifact_find_peaceful_applications:0 "แสวงหาความสงบสุข"
  artifact_find_peaceful_applications_desc:0 "Attempt to find peaceful applications for minor artifacts."
- artifact_find_peaceful_applications_effect:1 "Break down £minor_artifacts£Minor Artifacts for various civilian bonuses.\n\nPerforming this will prevent you from seeking military applications for a time.\n\nCooldown: £time£ §Y900§!"
+ artifact_find_peaceful_applications_effect:1 "Break down £minor_artifacts£Minor Artifacts for various civilian bonuses.\n\nPerforming this will prevent you from seeking military applications for a time.\n\nเวลาคูลดาวน์: £time£ §Y900§!"
  artifact_find_peaceful_applications_no_cooldown:0 "$artifact_find_military_applications_no_cooldown$"
- artifact_find_peaceful_application_happy_bios:0 "Ancient Fad"
+ artifact_find_peaceful_application_happy_bios:0 "ไวรัลแฟชั่นของยุคโบราณ"
  artifact_find_peaceful_application_happy_bios_desc:0 "The study of minor artifacts has unexpectedly launched a viral fad across your Empire. Everybody's doing it."
- artifact_find_peaceful_application_consumer_goods:0 "Efficient Manufacturing"
+ artifact_find_peaceful_application_consumer_goods:0 "การผลิตที่มีประสิทธิภาพ"
  artifact_find_peaceful_application_consumer_goods_desc:0 "Study of minor artifacts have yielded efficiency boosts to general manufacturing."
- artifact_find_peaceful_application_amenities:0 "Battery Miniaturization"
+ artifact_find_peaceful_application_amenities:0 "ย่อขนาดแบตเตอรี่"
  artifact_find_peaceful_application_amenities_desc:0 "Study of minor artifacts have yielded a 3% reduction in the battery size of personal electronics, allowing them to become thinner and cheaper to build than ever before!"
- artifact_find_peaceful_application_leader_improvement:0 "Management Insights"
+ artifact_find_peaceful_application_leader_improvement:0 "ข้อมูลเชิงลึกด้านการจัดการ"
  artifact_find_peaceful_application_leader_improvement_desc:0 "Ancient lessons and team building exercises have provided new insights to your leaders."
- artifact_find_peaceful_application_amenities_hivemind:0 "Efficient Maintenance"
+ artifact_find_peaceful_application_amenities_hivemind:0 "ซ่อมบำรุงอย่างมีประสิทธิภาพ"
  artifact_find_peaceful_application_amenities_hivemind_desc:0 "Our study of minor artifacts have uncovered techniques for our maintenance drones to exploit."
- artifact_find_peaceful_application_leader_improvement_hivemind:0 "Pheromone Enhancement"
+ artifact_find_peaceful_application_leader_improvement_hivemind:0 "เพิ่มประสิทธิภาพฟีโรโมน"
  artifact_find_peaceful_application_leader_improvement_hivemind_desc:0 "Study of minor artifacts have allowed us to enhance our pheromones, making it easier to lead."
  artifact_find_peaceful_application_amenities_machine:0 "$artifact_find_peaceful_application_amenities$"
  artifact_find_peaceful_application_amenities_machine_desc:0 "Study of minor artifacts have yielded a 3% reduction in the battery size of small electronics, increasing our efficiency."
- artifact_find_peaceful_application_leader_improvement_machine:0 "Algorithm Refinement"
+ artifact_find_peaceful_application_leader_improvement_machine:0 "ขัดเกลาอัลกอริทึม"
  artifact_find_peaceful_application_leader_improvement_machine_desc:0 "Study of minor artifacts have yielded slightly more efficient algorithms for our leaders."
  artifact_lgate_clue:0 "ค้นพบข้อมูลเชิงลึก L-Gate"
  artifact_lgate_clue_desc:0 "We should be able to piece together more of the mysteries surrounding the L-Gates using these artifacts."
@@ -281,7 +281,7 @@
  artifact_arcane_deciphering_locked_desc:0 "$artifact_action_locked_desc$"
  ancrel.10040.name:0 "โครงการพิเศษปลดล็อก"
  ancrel.10040.desc:0 "Our scientists have begun a special project to study the deeper secrets of the precursors."
- artifact_irassian_research:0 "Secrets of the Irassians"
+ artifact_irassian_research:0 "ความลับของ Irassian"
  artifact_irassian_research_desc:0 "Delve deeper into the secrets of the Irassians."
  artifact_irassian_research_completed:0 "$artifact_irassian_research$"
  artifact_irassian_research_completed_desc:0 "We have put the ancient knowledge of the Irassians to our own use."
@@ -292,7 +292,7 @@
  ancrel.9001.desc:0 "We have successfully managed to integrate the Irassian artifacts into our research process. Their insights into biological research will greatly aid our own."
  ancrel.9001.desc.phobe:0 "Though it clearly did not save them, the Irassians were admittedly experts in the field of biology. Our scientists have adapted what was worthwhile from their findings."
  irassian_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_irassian_research$§!"
- artifact_yuht_research:0 "Secrets of the Yuht"
+ artifact_yuht_research:0 "ความลับของ Yuht"
  artifact_yuht_research_desc:0 "Delve deeper into the secrets of the Yuht."
  artifact_yuht_research_completed:0 "$artifact_yuht_research$"
  artifact_yuht_research_completed_desc:0 "We have put the ancient knowledge of the Yuht to our own use."
@@ -309,7 +309,7 @@
  decision_yuht_cleanseplanet_desc:0 "Violently eradicates most hostile wildlife from a planet and - once it recovers - modifies the biosphere to better suit our needs."
  pm_yuht_cleansing:0 "Yuht Cleansing"
  pm_yuht_cleansing_desc:0 "This planet was violently cleansed of most hostile wildlife."
- artifact_vultaum_research:0 "Secrets of the Vultaum"
+ artifact_vultaum_research:0 "ความลับของ Vultaum"
  artifact_vultaum_research_desc:0 "Delve deeper into the secrets of the Vultaum."
  VULTAUM_SECRETS:0 "Delve into the Secrets of the Vultaum"
  VULTAUM_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the Vultaum to our own."
@@ -320,9 +320,9 @@
  ancrel.10100.desc_machine:0 "The Vultaum appear to have accepted some fundamentally illogical concepts in their research. Their research into computing and virtual worlds had some advances that we shall incorporate into our own processes."
  ancrel.10100.desc_hive:0 "The Vultaum obsessed over the concept of reality and of virtual worlds. Most of their findings are useless to us, but at least their research into computing will aid our own."
  ancrel.10100.desc_fm:0 "The Vultaum were undisputed masters at computing and virtual worlds. We will be able to use their findings to dramatically aid our own research into these fields.\n\nTheir conclusions are troubling, however. At first glance they appear to be fundamentally flawed nonsense, but upon deeper inspection they seem to have elements of truth to them.\n\nIf we wish to delve deeper, we will require additional time and resources."
- artifact_vultaum_research_completed_suppressed:0 "Secrets of the Vultaum"
+ artifact_vultaum_research_completed_suppressed:0 "ความลับของ Vultaum"
  artifact_vultaum_research_completed_suppressed_desc:0 "The Vultaum archives have expanded our knowledge of computing considerably. We have used what we learned to create artificial virtual worlds for the enjoyment of all."
- artifact_vultaum_research_completed_public:0 "Deeper Secrets of the Vultaum"
+ artifact_vultaum_research_completed_public:0 "ความลึกลับของ Vultaum"
  artifact_vultaum_research_completed_public_desc:0 "The Vultaum archives suggest that we live in a simulation. Now that we understand our reality, we can exploit certain loopholes to understand how it functions to our benefit."
  artifact_vultaum_research_completed_machine:0 "$artifact_vultaum_research_completed_suppressed$"
  artifact_vultaum_research_completed_machine_desc:0 "$ancrel.10100.desc_machine$"
@@ -343,7 +343,7 @@
  ancrel.10112.desc:0 "Reports indicate that the stress of leading the research into the Vultaum has affected [leading_vultaum_research_scientist.GetName].\n\nThey have begun to make incredible leaps of logic that are greatly aiding our research, but have also begun self-medicating as a coping mechanism."
  ancrel.10113.name:0 "Breakthrough"
  ancrel.10113.desc:0 "Reports indicate that [leading_vultaum_research_scientist.GetName] has benefited greatly the research project, and has begun to make incredible leaps of logic that are greatly aiding our research."
- artifact_league_research:0 "Secrets of the First League"
+ artifact_league_research:0 "ความลับของ First League"
  artifact_league_research_desc:0 "Delve deeper into the secrets of the First League."
  artifact_league_research_completed:0 "$artifact_league_research$"
  artifact_league_research_completed_desc:0 "We have put the ancient knowledge of the First League to our own use."
@@ -354,7 +354,7 @@
  ancrel.10200.desc:0 "We have successfully managed to integrate the First League artifacts into our research process. Their insights into industrial research will greatly aid our own."
  ancrel.10200.desc.phobe:0 "The First League proves that reliance on other races is folly that leads to weakness and self-destruction. Some of their advanced construction methods may, however, be of possible use."
  league_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_league_research$§!"
- artifact_cybrex_research:0 "Secrets of the Cybrex"
+ artifact_cybrex_research:0 "ความลับของ Cybrex"
  artifact_cybrex_research_desc:0 "Delve deeper into the secrets of the Cybrex."
  artifact_cybrex_research_completed:0 "$artifact_cybrex_research$"
  artifact_cybrex_research_completed_desc:0 "We have put the ancient knowledge of the Cybrex to our own use."
@@ -365,7 +365,7 @@
  ancrel.10250.desc:0 "We have successfully managed to integrate the Cybrex artifacts into our research process. Their insights into megastructure engineering will greatly aid our own."
  ancrel.10250.desc.antimachine:0 "The tale of the Cybrex is proof that our decision to outlaw artificial intelligence is a wise one.  Some of their findings related to megastructure engineering have the potential to be beneficial to our cause."
  cybrex_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_cybrex_research$§!"
- artifact_baol_research:0 "Secrets of the Baol"
+ artifact_baol_research:0 "ความลับของ Baol"
  artifact_baol_research_desc:0 "Delve deeper into the secrets of the Baol."
  artifact_baol_research_completed:0 "$artifact_baol_research$"
  artifact_baol_research_completed_desc:0 "We have put the ancient knowledge of the Baol to our own use."
@@ -376,7 +376,7 @@
  ancrel.10300.desc.terraform:0 "Studying the Baol has given us new insights into the spread of plant life and improved our terraforming processes.\n\nBy carefully tracking the changes that the Baol underwent during their loss of sentience we also learned much about the uplifting process, but have already mastered that technology."
  ancrel.10300.desc.uplift:0 "By carefully tracking the changes that the Baol underwent during their loss of sentience, we have gained much knowledge on how to reverse that process.\n\nWe have also gained new insights into the spread of plant life and improved our terraforming processes."
  baol_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_baol_research$§!"
- artifact_zroni_research:0 "Secrets of the Zroni"
+ artifact_zroni_research:0 "ความลับของ Zroni"
  artifact_zroni_research_desc:0 "Delve deeper into the secrets of the Zroni."
  artifact_zroni_research_completed:0 "$artifact_zroni_research$"
  artifact_zroni_research_completed_desc:0 "We have put the ancient knowledge of the Zroni to our own use."
@@ -741,7 +741,7 @@
  building_scrap_processing_plant_desc:0 "Processing plants for material scavenged from the ring."
  building_scrap_processing_hub_desc:0 "Massive hubs where material scavenged from the ring is received and then shuttled to arrays of purifiers."
  mod_planet_miners_alloys_produces_add:0 "£alloys£ $alloys$จาก £job_miner£ [GetMinerPlural]"
- d_artifacts_1:0 "Minor Artifacts Deposit"
+ d_artifacts_1:0 "แหล่งทรัพยากรศิลปวัตถุชั้นรอง"
  d_artifacts_2:0 "$d_artifacts_1$"
  d_artifacts_3:0 "$d_artifacts_1$"
  d_artifacts_mining_1:0 "$d_artifacts_1$"
