--- a/mod/thmod/localisation/english/events_2_l_english.yml
+++ b/mod/thmod/localisation/english/events_2_l_english.yml
@@ -168,9 +168,9 @@
  anomaly.120.a:0 "วาดภาพพวกมันแล้วเก็บไว้ในคลังข้อมูล"
  anomaly.120.b:0 "พวกมัน... สวยงาม"
  anomaly.120.b.tooltip:2 "สร้างการจำลองเสาหินแบบดิจิทัลใน §Yจักรวรรดิ§! ของเรา"
- anomaly.121.desc:0 "The annotated reproductions of the monolithic imagery found on [From.From.GetName] prove immensely popular in the [Root.GetName].\n\nMany citizens state that the fantastical annals have completely changed how they feel about aliens."
- anomaly.121.a.tooltip:0 "§B6 £pops£ Pops§! gain the §YXenophile§! Ethic."
- anomaly.121.b.tooltip:0 "§B3 £pops£ Pops§! gain the §YXenophile§! Ethic."
+ anomaly.121.desc:0 "ภาพจำนวนมากที่มีคำอธิบายประกอบที่พบใน [From.From.GetName] ได้รับความนิยมอย่างมากใน [Root.GetName]\n\nประชาชนหลายคนกล่าวว่าพงศาวดารแฟนตาซีนี้ได้เปลี่ยนความรู้สึกที่มีต่อมนุษย์ต่างดาวไปอย่างสิ้นเชิง"
+ anomaly.121.a.tooltip:0 "§B6 £pops£ ประชากร§! มีจริยธรรม §Yชอบต่างดาว§!"
+ anomaly.121.b.tooltip:0 "§B3 £pops£ ประชากร§! มีจริยธรรม §Yชอบต่างดาว§!"
  anomaly.125.name:0 "Unsolicited Mapping"
  anomaly.125.desc:0 "Intercepting the distress signal, the [Root.GetName] sends a probe down to the volatile surface of [From.GetName]. It seems an unregistered freighter recently crashed on the planet; whatever it was carrying has been reduced an ashen sludge, but some data from the navigation computer can be recovered and survey data for this system reconstructed."
  anomaly.125.a:0 "Make it so."
@@ -1009,30 +1009,30 @@
  uplift.7200.desc:0 "A statistically significant group of [From.From.From.GetName] citizens appear unsatisfied with our teachings on the nature of the cosmos.\n\nAn unknown individual or group among them is circulating some spurious codex that attaches undue importance to the [From.From.From.GetName] and their uplifting by the [Root.Owner.GetName]."
  uplift.7200.a:0 "Nothing will come of it."
  uplift.7200.b:0 "Let them have their mysteries."
- uplift.7200.b.tooltip:0 "The [From.From.From.GetName] gain the §YSpiritualist§! Ethic."
+ uplift.7200.b.tooltip:0 "[From.From.From.GetName] มีจริยธรรม §Yจิตวิญญาณนิยม§!"
  uplift.7200.c:0 "Set them straight by any means necessary."
- uplift.7200.c.tooltip:0 "The [From.From.From.GetName] gain the §YMaterialist§! Ethic."
+ uplift.7200.c.tooltip:0 "[From.From.From.GetName] มีจริยธรรม §Yวัตถุนิยม§!"
  uplift.7205.name:0 "Conscientious Objectors"
  uplift.7205.desc:0 "Some issues have arisen on [Root.GetName] as a result of the [From.From.From.GetName] populace's aversion to arms. A representative has made a formal request for clearly delineated demilitarized zones."
  uplift.7205.a:0 "Very well."
  uplift.7205.b:0 "The courage of their convictions should be celebrated."
- uplift.7205.b.tooltip:0 "The [From.From.From.GetName] gain the §YPacifist§! Ethic."
+ uplift.7205.b.tooltip:0 "[From.From.From.GetName] มีจริยธรรม §Yรักสันติ§!"
  uplift.7205.c:0 "They must learn that the specter of war looms over us all."
- uplift.7205.c.tooltip:0 "The [From.From.From.GetName] gain the §YMilitarist§! Ethic."
+ uplift.7205.c.tooltip:0 "[From.From.From.GetName] มีจริยธรรม §Yชอบสงคราม§!"
  uplift.7210.name:0 "Stranger Danger"
  uplift.7210.desc:0 "According to reports, newly-uplifted [From.From.From.GetName] citizens on [Root.GetName] grow anxious as their [Root.Owner.GetSpeciesName] teachers bring up the likelihood of contact with as-yet-unknown entities from the far reaches of space."
  uplift.7210.a:0 "I see..."
  uplift.7210.b:0 "What is alien to us is simply opportunity in disguise."
- uplift.7210.b.tooltip:0 "The [From.From.From.GetName] gain the §YXenophile§! Ethic."
+ uplift.7210.b.tooltip:0 "[From.From.From.GetName] มีจริยธรรม §Yชอบต่างดาว§!"
  uplift.7210.c:0 "They are right to fear the unknown."
- uplift.7210.c.tooltip:0 "The [From.From.From.GetName] gain the §YXenophobe§! Ethic."
+ uplift.7210.c.tooltip:0 "[From.From.From.GetName] มีจริยธรรม §Yเกลียดต่างดาว§!"
  uplift.7215.name:0 "Familial Fission"
  uplift.7215.desc:0 "While the [Root.Owner.GetName] provides a solid structure upon which to model their internal social order, it may not necessarily be what suits the uplifted [From.From.From.GetName] best.\n\nTheir sudden rise to becoming our intellectual equals robbed them of millennia of potential societal and cultural development. Perhaps as a result of this, the [From.From.From.GetName] social order is in a state of extreme flux; one day the family unit is paramount, and the next day community leaders are calling for a dissolution of all clan-like bonds."
  uplift.7215.a:0 "น่าสนใจ"
  uplift.7215.b:0 "May the [From.From.From.GetName] find themselves, in each other."
- uplift.7215.b.tooltip:1 "The [From.From.From.GetName] gain the §YAuthoritarian§! Ethic."
+ uplift.7215.b.tooltip:1 "[From.From.From.GetName] มีจริยธรรม §Yอำนาจเผด็จการ§!"
  uplift.7215.c:0 "Self-realization comes only through independence."
- uplift.7215.c.tooltip:1 "The [From.From.From.GetName] gain the §YEgalitarian§! Ethic."
+ uplift.7215.c.tooltip:1 "[From.From.From.GetName] มีจริยธรรม §Yความเสมอภาค§!"
  uplift.7500.name:0 "Forked Chain"
  uplift.7500.desc:0 "A number of individuals belonging to the pre-sapient, native population of [From.GetName] somehow got into a secure compound on the outskirts of our colony. They were chased off within hours, but not before severely damaging several interstellar uplinks dedicated to currency transfers.\n\nWe fear several hundred Credits may have been lost in the ether."
  uplift.7510.name:0 "In Vivo"
