--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -2,12 +2,12 @@
  OK:0 "ตกลง"
  EXCELLENT:0 "ยอดเยี่ยม"
  GOOD:0 "ดี"
- MARVELOUS:0 "Marvelous."
+ MARVELOUS:0 "น่าพิศวง"
  FASCINATING:0 "น่าสนใจ"
- REMARKABLE:0 "Remarkable."
+ REMARKABLE:0 "น่าสังเกต"
  INTERESTING:0 "น่าสนใจ"
  DISGUSTING:0 "Disgusting."
- INTRIGUING:0 "Intriguing."
+ INTRIGUING:0 "น่าสนใจ"
  INCREDIBLE:0 "Incredible."
  ASTOUNDING:0 "Astounding."
  CURIOUS:0 "Curious."
