--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -2013,11 +2013,11 @@
  galcom.69.desc:0 "Our motion to relocate the Galactic Market has unfortunately failed. While we mustered significant vocal support for the endeavor, this did not translate into enough valid nominations for a new host site.\n\nThe idea remains sound in principle: the [global_event_country.GetGalCommunityOrGalImperium] may propose moving the Market again in future, if it so desires. For now though, this commercial institution remains in the lucrative care of the [market_founder.GetName]."
  galcom.70.desc:0 "Galactic commerce experienced a brief and confusing resurgence recently, with news that the effort to relocate the Galactic Market has failed. Despite the [global_event_country.GetGalCommunityOrGalImperium]'s stated desire to move this institution, they received no valid nominations for a replacement host. As a result, the [market_founder.GetName] shall remain its hosts until the winds of political change swing back to polling for a replacement."
  galcom.70.desc.founder:0 "The galaxy's political will is clearly not aligned with that of its markets. After having caused widespread financial upset, the [global_event_country.GetGalCommunityOrGalImperium]'s effort to remove us as hosts to its dedicated trading hub has failed, with no other empires putting forward a valid nomination for a host site.\n\nProponents of this motion are unfazed, affirming that the Galactic Market may yet move wherever and whenever commercial needs dictate. For now though, it would seem that after all that fuss, the galaxy's foremost merchants prefer to keep their trust in us."
- origin_fallen_empire:0 "Elder Race"
+ origin_fallen_empire:0 "เผ่าพันธุ์โบราณ"
  origin_fallen_empire_desc:0 "This civilization greatly predates the current generation of galactic powers. Eons of stagnation gradually reduced their empire to a mere shadow of what it once was."
- origin_enlightened:0 "Enlightened"
+ origin_enlightened:0 "รู้แจ้ง"
  origin_enlightened_desc:0 "The natural development of this civilization was greatly accelerated by the interference of another party, who helped them become a spacefaring culture."
- origin_default_pre_ftl:0 "Developing Civilization"
+ origin_default_pre_ftl:0 "กำลังพัฒนาอารยธรรม"
  origin_default_pre_ftl_desc:0 "This civilization has yet to become spacefaring, however with a little encouragement or a great deal of time they may yet become an actor on the galactic stage."
  origin_void_dwellers:0 "ผู้อยู่อาศัยในอวกาศ"
  origin_void_dwellers_desc:0 "This civilization has made its home in space for as long as it has maintained records - life in a typical planetary environment is anathema to them. They live on three orbital habitats that were only recently united."
@@ -2527,7 +2527,7 @@
  SEARCH:0 "Keep searching."
  federations2.3.name:0 "Records of the Lost"
  federations2.3.desc:0 "Our scientist team on [From.Planet.GetName] have found a series of intact data cores depicting the inhabitants of the planet - the Shallarians - when their civilization was at its peak, around a thousand years ago. It is clear the Shallarians were very advanced indeed - capable of moulding entire solar systems to their will.\n\nThe moons of [From.Planet.GetName] originally orbited the system's gas giants, and were dragged into their current positions as an elaborate work of art. Darad - the shattered planet opposite [From.Planet.GetName] - was extensively terraformed to be a near-identical but uninhabited clone to Shallash, serving as a nature reserve: a reminder of how their homeworld had once been.\n\nDespite all these marvels, no mention has been found of the Shallarians' military capabilities. Indeed, they appear to have cared little for anything happening beyond the confines of their own space..."
- federations2.3.A:0 "Intriguing."
+ federations2.3.A:0 "น่าสนใจ"
  federations2.4.name:0 "The Shallarian Peace"
  federations2.4.desc:0 "[Root.Leader.GetTitle] [Root.Leader.GetName] has been able to shed further light on the Shallarian civilization. It seems they were an exceptionally peaceful species who - in spite of clear evidence to the contrary on the galactic stage - considered war between spacefaring civilizations to be inconceivable and illogical. After all, their own technological progress had brought post-scarcity to within their reach - what more could they possibly want? Consequently, they rather neglected building up their military forces, leaving themselves vulnerable. However, nothing yet uncovered offers any clues as to who may have wished to destroy what they had built."
  federations2.4.A:0 "How naive of them."
