--- a/mod/thmod/localisation/english/first_contact_dlc_tech_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_dlc_tech_l_english.yml
@@ -221,16 +221,16 @@
  tech_temple_of_transportation:0 "วิหารแห่งการขนส่ง"
  tech_temple_of_transportation_desc:0 "Transportation networks bring people together: a sentiment shared by many civilization we observed. While we do not have steam engines, our hyper relay networks could serve a similar purpose."
  SENSOR_DEVICE_VALUE:0 "เซ็นเซอร์ของฐานอวกาศ: §G+$VALUE|0$§!"
- HYPERLANE_DETECTION_RANGE_DESC:0 "§E§H$HYPERLANE_RANGE$§! is the maximum range at which hyperlanes can be detected from this Starbase.§!"
- SENSOR_RANGE_DESC:0 "§E§H$SENSOR_RANGE$§! is the maximum range at which this Starbase's sensors can function.§!"
+ HYPERLANE_DETECTION_RANGE_DESC:0 "§E§H$HYPERLANE_RANGE$§! คือระยะสูงสุดที่สามารถตรวจจับไฮเปอร์เลนได้จากฐานอวกาศนี้§!"
+ SENSOR_RANGE_DESC:0 "§E§H$SENSOR_RANGE$§! คือช่วงระยะสูงสุดที่เซ็นเซอร์ของฐานอวกาศสามารถทำงานได้§!"
  TRADE_COLLECTION_VALUE:0 "$COLLECTION_RANGE$: $VALUE|Y0$"
- TRADE_COLLECTION_DESC:0 "§E§H$COLLECTION_RANGE$§! is the maximum range at which this Starbase can collect Trade Value from nearby Systems.§!"
+ TRADE_COLLECTION_DESC:0 "§E§H$COLLECTION_RANGE$§! คือระยะสูงสุดที่ฐานอวกาศนี้สามารถรวบรวมมูลค่าการค้าจากระบบดาวใกล้เคียง§!"
  TRADE_PROTECTION_VALUE:0 "$MOD_STARBASE_TRADE_PROTECTION_ADD$: $VALUE|Y0$"
  TRADE_PROTECTION_DESC:0 "§E§H$MOD_STARBASE_TRADE_PROTECTION_ADD$§! is the amount by which this Starbase will reduce Piracy in nearby Systems.§!"
  TRADE_PROTECTION_RANGE_VALUE:0 "$PROTECTION_RANGE$: $VALUE|Y0$"
- TRADE_PROTECTION_RANGE_DESC:0 "§E§H$PROTECTION_RANGE$§! is the maximum range at which this Starbase's Trade Protection will reduce Piracy in nearby Systems.§!"
- GO_TO_preFTL_PLANET:0 "Go To Planet"
- GO_TO_preFTL_PLANET_tt:0 "Click to visit the pre-FTL planet."
+ TRADE_PROTECTION_RANGE_DESC:0 "§E§H$PROTECTION_RANGE$§! คือระยะสูงสุดของการคุ้มครองการค้าของฐานอวกาศนี้ที่จะลดการปล้นสะดมในระบบดาวใกล้เคียง§!"
+ GO_TO_preFTL_PLANET:0 "ไปที่ดาวเคราะห์"
+ GO_TO_preFTL_PLANET_tt:0 "คลิกเพื่อเยี่ยมชมดาวเคราะห์ pre-FTL"
  GO_TO_OBSERVATION_POST:0 "Go To Observation Post"
  GO_TO_OBSERVATION_POST_tt:0 "Click to visit the Observation Post orbiting the pre-FTL planet."
  CLOAKING_DETECTION_TITLE:0 "Cloaking Detection"
