--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -1190,23 +1190,23 @@
  pre_ftl_laser_ship:0 "Early Laser Spaceship"
  pre_ftl_laser_ship_plural:0 "Early Laser Spaceships"
  NAME_Pre_FTL_Laser_Ship:0 "$pre_ftl_laser_ship$"
- awareness_unaware:0 "Completely Unaware"
- awareness_low:0 "Low Awareness"
- awareness_partial:0 "Partially Aware"
- awareness_high:0 "High Awareness"
- awareness_full:0 "Fully Aware"
- awareness_unaware_tt:0 "This civilization is not aware of interstellar life."
- awareness_low_tt:0 "Lacking evidence of interstellar life, this civilization still believes it may be alone in the universe."
+ awareness_unaware:0 "ไม่รู้โดยสิ้นเชิง"
+ awareness_low:0 "มีการรับรู้ต่ำ"
+ awareness_partial:0 "รับรู้บางส่วน"
+ awareness_high:0 "มีการรับรู้สูง"
+ awareness_full:0 "รับรู้ครบถ้วนสมบูรณ์"
+ awareness_unaware_tt:0 "อารยธรรมนี้ไม่รู้ถึงสิ่งมีชีวิตระหว่างดวงดาว"
+ awareness_low_tt:0 "เนื่องจากขาดหลักฐานของชีวิตระหว่างดวงดาว อารยธรรมนี้ยังเชื่อว่าอาจอยู่เพียงลำพังในจักรวาล"
  awareness_partial_tt:0 "This civilization is partially aware of the existence of life in the galaxy. Something is out there. But what?"
  awareness_high_tt:0 "This civilization is aware that the galaxy is full of life; but who are these creatures, and what do they want?"
  awareness_full_tt:0 "Fully aware of interstellar life, this civilization understands it belongs to a galactic community."
- AWARENESS_STAGE_VAL_DESC:0 "Current Awareness: $VAL|0Y$"
- AWARENESS_OLD_DESC:0 "At the start of the month, their awareness was $OLDVAL|0Y$."
+ AWARENESS_STAGE_VAL_DESC:0 "การรับรู้ในปัจจุบัน: $VAL|0Y$"
+ AWARENESS_OLD_DESC:0 "เมื่อต้นเดือน การรับรู้ของพวกเขาอยู่ที่ $OLDVAL|0Y$"
  PREFTL_TECH_LEVEL_VAL_DESC:0 "Current progress to the next age: §Y$VAL|0%$§!"
- MESSAGE_PRE_FTL_AWARENESS_INCREASED_TITLE:0 "Awareness Increased"
- MESSAGE_PRE_FTL_AWARENESS_INCREASED_DESC:1 "The £awareness£ §YAwareness§! of the $COUNTRY|Y$ in the $SYSTEM|Y$ system has increased to §Y[root.GetAwarenessLevel]§!."
- MESSAGE_PRE_FTL_AWARENESS_DECREASED_TITLE:0 "Awareness Decreased"
- MESSAGE_PRE_FTL_AWARENESS_DECREASED_DESC:1 "The £awareness£ §YAwareness§! of the $COUNTRY|Y$ in the $SYSTEM|Y$ system has decreased to §Y[root.GetAwarenessLevel]§!."
+ MESSAGE_PRE_FTL_AWARENESS_INCREASED_TITLE:0 "การรับรู้เพิ่มขึ้น"
+ MESSAGE_PRE_FTL_AWARENESS_INCREASED_DESC:1 "£awareness£ §Yการรับรู้§! ของ $COUNTRY|Y$ ในระบบดาว $SYSTEM|Y$ เพิ่มขึ้นเป็น §Y[root.GetAwarenessLevel]§!"
+ MESSAGE_PRE_FTL_AWARENESS_DECREASED_TITLE:0 "การรับรู้ลดลง"
+ MESSAGE_PRE_FTL_AWARENESS_DECREASED_DESC:1 "£awareness£ §Yการรับรู้§! ของ $COUNTRY|Y$ ในระบบดาว $SYSTEM|Y$ ลดลงเป็น §Y[root.GetAwarenessLevel]§!"
  awareness.910.name:0 "Exposed!"
  awareness.910.desc:0 "We have been careless, conducting operations in the §Y[contact_empire_system.GetName]§! system without bothering to hide our activities. Despite their modest technology level, even the §Y[contact_empire.GetName]§! have taken notice of our activity. First Contact is now unavoidable."
  awareness.920.name:0 "Who Watches The Watchers?"
