--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -304,11 +304,11 @@
  PLANET_AMENITIES_PRODUCED:0 "ความอยู่ดีกินดีที่เตรียมไว้: $VALUE|G0$"
  PLANET_DISTRICTS_AVAILABLE:0 "ช่องเขตที่ว่าง: $VALUE|0$"
  PLANET_NUM_DISTRICTS_UNCAPPED:0 "$PLANET|Y$ มี $NAME$ $AMOUNT|Y$"
- PLANET_NUM_DISTRICTS_CAPPED:0 "$PLANET|Y$ has $AMOUNT|Y$ $NAME$ out of $MAX|Y$ maximum possible"
+ PLANET_NUM_DISTRICTS_CAPPED:0 "$PLANET|Y$ มี $NAME$ $AMOUNT|Y$ จากทั้งหมดที่เป็นไปได้ $MAX|Y$"
  PLANET_NUM_DISTRICT_BLOCKERS_NONE:0 "$PLANET|Y$ has no £blocker£ §YBlockers§! preventing the construction of additional $NAME$"
  PLANET_NUM_DISTRICT_BLOCKERS:0 "$PLANET|Y$ has $AMOUNT|Y$ £blocker£ §YBlockers§! that are preventing the construction of additional $NAME$"
  PLANET_NUM_DISTRICT_CONSTRUCTIONS:0 "$PLANET|Y$ มี $NAME$ $AMOUNT|Y$ อยู่ระหว่างการก่อสร้าง"
- PLANET_NUM_DISTRICT_CONSTRUCTIONS_NONE:0 "$PLANET|Y$ has no $NAME$ under construction"
+ PLANET_NUM_DISTRICT_CONSTRUCTIONS_NONE:0 "$PLANET|Y$ ไม่มี $NAME$ อยู่ระหว่างการก่อสร้าง"
  QUICK_CLEAR_BLOCKER:0 "เคลียร์เขตที่มีสิ่งกีดขวาง"
  QUICK_CLEAR_BLOCKER_DESC:0 "We can clear a blocker that is preventing the construction of districts on the planet"
  NO_BLOCKER_TO_QUICK_CLEAR:0 "§RThere are no clearable blockers preventing the construction of districts on the planet§!"
@@ -2924,7 +2924,7 @@
  LEADER_TOP_BAR_ITEM_LEADER_FORMAT:0 "$LEADERTYPE$ ($TOTAL|Y$)"
  LEADER_TOP_BAR_TT_LEADER_ENTRY:0 "$NAME|Y$\n$ACTION$"
  OPEN_LEADER_VIEW:0 "§Gคลิกเพื่อดู $CLASS_PLURAL|Y$§!"
- OPEN_LEADER_VIEW_NO_CLASS:0 "§GClick to open Leader View§!"
+ OPEN_LEADER_VIEW_NO_CLASS:0 "§Gคลิกเพื่อเปิดหน้าต่างผู้นำ§!"
  OPEN_ENVOY_VIEW:0 "§Gคลิกเพื่อเปิดหน้าต่างแต่งตั้งทูต§!"
  NUM_AVAILABLE_ENVOYS:0 "มีทูต: $NUM|Y$"
  matter_decompressor_0:1 "$matter_decompressor_4$ (ขั้นที่0:ที่ตั้ง)"
