--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -7,10 +7,10 @@
  autoselect_traits:0 "เลือกคุณลักษณะอัตโนมัติ"
  RECRUIT_LEADER_VIEW_HIRE:0 "Hire ($COST$)"
  LEADER_STATUS_DESC:0 "[Root.LeaderAssignDesc]"
- leader_desc_admiral:0 "§E§HAdmirals§! can be assigned to command a §HFleet§! and occupy a valid §HCouncil Position§! at the same time§!"
- leader_desc_scientist:0 "§E§HScientists§! can be assigned to pilot a §HScience Ship§! and occupy a valid §HCouncil Position§! at the same time§!"
- leader_desc_general:0 "§E§HGenerals§! can be assigned to lead an §HAssault Army§! and occupy a valid §HCouncil Position§! at the same time§!"
- leader_desc_governor:0 "§E§HGovernors§! can be assigned to govern a §HPlanet§! and occupy a valid §HCouncil Position§! at the same time§!"
+ leader_desc_admiral:0 "§Eสามารถแต่งตั้ง §Hพลเรือเอก§! ให้คุม §Hกองยานรบ§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
+ leader_desc_scientist:0 "§Eสามารถแต่งตั้ง §Hนักวิทยาศาสตร์§! ให้คุม §Hยานวิจัยวิทยาศาสตร์§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
+ leader_desc_general:0 "§Eสามารถแต่งตั้ง §Hพลเอก§! ให้คุม §Hกองบก(ทัพจู่โจม)§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
+ leader_desc_governor:0 "§Eสามารถแต่งตั้ง §Hผู้ว่าการ§! ให้ปกครอง §Hดาวเคราะห์§! ควบคู่ไปกับ §Hตำแหน่งในสภา§! ในเวลาเดียวกันได้§!"
  EXTERNAL_POOL_AVAILABILITY_TITLE:0 "$NAME|Y$ is available as an external leader due to:"
  FROM_DEFENDING_GENERAL:0 "Defending General $NAME|H$:\n"
  FROM_ATTACKING_GENERAL:0 "Attacking General $NAME|H$:\n"
@@ -179,7 +179,7 @@
  UNAVAILABLE_AGENDAS:0 "แผนที่ไม่มี"
  FINISHED_AGENDAS:0 "เริ่มแผนการไปแล้ว"
  AGENDA_IS_ACTIVE:0 "ใช้งานได้อีก £time£$TIME$"
- AGENDA_IS_ON_COOLDOWN:0 "The Agenda $AGENDA|H$ is on cooldown until $DATE|H$"
+ AGENDA_IS_ON_COOLDOWN:0 "แผนการ/วาระ $AGENDA|H$ มีคูลดาวน์จนถึง $DATE|H$"
  AGENDA_PROGRESS_EFFECTS_FROM_ETHIC_MATCH:0 "ผลเมื่อตรงกับจริยธรรมของผู้นำ: $EFFECT$"
  AGENDA_PROGRESS_EFFECTS_FROM_ETHIC_MISMATCH:0 "ผลเมื่อไม่ตรงกับจริยธรรมของผู้นำ: $EFFECT$"
  COUNCIL_ACTIVE_EDICTS:0 "เปิดใช้งานประกาศคำสั่ง"
@@ -206,7 +206,7 @@
  CAPITAL_SYSTEM_EFFECTS_TXT:1 "ส่งผลกับ £system£ §Yระบบดาวศูนย์กลาง§!"
  ASSIST_RESEARCH_EFFECTS_TXT:0 "มีผลต่อ £planet£ §Yดาวเคราะห์§! §Eส่งผลขณะ§! §Yวิจัย§!"
  alert_unassigned_leader_title:0 "ผู้นำที่ว่าง"
- alert_unassigned_leader_instant:0 "You have one or more Leaders ready to be put to work."
+ alert_unassigned_leader_instant:0 "คุณมีผู้นำอย่างน้อยหนึ่งคนที่พร้อมจะทำงาน"
  alert_unassigned_leader_instruction:0 "§GClick to open Leaders view§!"
  DAYS_UNTIL_LEADER_POOL_REFRESH:0 "กลุ่มผู้นำถูกรีเฟรช $DATE$ (เหลือ $TIME$)"
  DIALOG_EARLY_ACTIVATE_AGENDA_TITLE:0 "Immediate Agenda Activation"
@@ -223,7 +223,7 @@
  TOPBAR_SETTINGS_BUTTON:0 "§Hสลับตัวเลือกเมนู§!\n§Gปรับแต่งลำดับของรายการในเมนู§!"
  RESET_TOPBAR_ORDERING:0 "§HReset§!\n§GClick to reset menu items back to the default order.§!"
  GOVERNANCE_SKILL_FROM_LOCAL_GOVERNOR:0 "§HGovernance Level§!\n$SKILL|Y$ from Planet Governor $NAME|Y$\n\n$SEPARATOR$\n§EPlanet §HGovernance Level§! is determined by the §HSkill§! of the §YPlanet§! or §YSector§! governor, whichever is highest.§!"
- GOVERNANCE_SKILL_FROM_SECTOR_GOVERNOR:0 "§HGovernance Level§!\n$SKILL|Y$ from Sector Governor $NAME|Y$\n\n$SEPARATOR$\n§EPlanet §HGovernance Level§! is determined by the §HSkill§! of the §YPlanet§! or §YSector§! governor, whichever is highest.§!"
+ GOVERNANCE_SKILL_FROM_SECTOR_GOVERNOR:0 "§Hเลเวลการปกครอง§!\n$SKILL|Y$ จากผู้ว่าการระดับเซ็กเตอร์ชื่อ $NAME|Y$\n\n$SEPARATOR$\n§E§Hเลเวลการปกครอง§! ของดาวเคราะห์ ถูกกำหนดโดย §Hสกิล§! ของผู้ว่าการ §Yดาวเคราะห์§! หรือผู้ว่าการ §Yเซ็กเตอร์§! ที่สูงที่สุด§!"
  SECTOR_CAPITAL_NAME_WITH_FLAG:0 "£sector_capital£$NAME$"
  councilor_trait:2 "§cคุณลักษณะผู้นำ§! (£council£)"
  leader_trait:0 "§cคุณลักษณะผู้นำ§!"
@@ -589,7 +589,7 @@
  BACKGROUND_A_CLASS:0 "[Root.Class_A_An] [Root.GetClass]"
  BACKGROUND_AN_ETHIC_CLASS:0 "[Root.Ethic_A_An] [Root.GetBackgroundEthic] [Root.GetClass]"
  MESSAGE_NEGATIVE_TRAIT_TITLE:0 "คุณลักษณะเชิงลบใหม่"
- negative_trait_acquired_desc:0 "§Y$LEADER$§! got a negative trait."
+ negative_trait_acquired_desc:0 "§Y$LEADER$§! มีคุณลักษณะเชิงลบ"
  MESSAGE_GAINED_TRAIT_TITLE:0 "คุณลักษณะใหม่"
  MESSAGE_GAINED_TRAIT_DESC:0 "$NAME|Y$ มีคุณลักษณะ $TRAIT_NAME|H$"
  MESSAGE_GAINED_SUBCLASS_TITLE:0 "ผู้นำที่มีประสบการณ์คนใหม่"
@@ -600,9 +600,9 @@
  MESSAGE_SALVAGED_SHIPS_FROM_DEBRIS_TITLE:0 "Ships Salvaged"
  MESSAGE_SALVAGED_SHIPS_FROM_DEBRIS_DESC:0 "Successfully salvaged $NUM_SHIPS|Y$ ship(s) from a debris in $SYSTEM|Y$"
  MESSAGE_COUNCIL_AGENDA_AVAILABLE_TITLE:0 "แผนการของสภาที่มี"
- MESSAGE_COUNCIL_AGENDA_AVAILABLE_COOLDOWN_DESC:0 "The Agenda $AGENDA|Y$ is no longer on cooldown."
+ MESSAGE_COUNCIL_AGENDA_AVAILABLE_COOLDOWN_DESC:0 "แผนการ/วาระ $AGENDA|Y$ ไม่อยู่ในระยะคูลดาวน์อีกต่อไป"
  MESSAGE_COUNCIL_AGENDA_AVAILABLE_UNLOCKED_DESC:0 "แผนการ/วาระ $AGENDA|Y$ ถูกปลดล็อก"
- MESSAGE_COUNCIL_AGENDA_AVAILABLE_UNLOCKED_INSPIRING_AGENDAS:1 "The Agendas §Y$council_agenda_agenda_rightful_claims_name$§!, and §Y$council_agenda_agenda_oppose_the_fallen_name$§! have been unlocked."
+ MESSAGE_COUNCIL_AGENDA_AVAILABLE_UNLOCKED_INSPIRING_AGENDAS:1 "แผนการ/วาระ §Y$council_agenda_agenda_rightful_claims_name$§!, และ §Y$council_agenda_agenda_oppose_the_fallen_name$§! ได้รับการปลดล็อก"
  MESSAGE_RECRUITED_LEADER_TITLE:0 "ได้ผู้นำ"
  MESSAGE_RECRUITED_LEADER_DESC:0 "§H[LEADER.GetClass]§! §Y$LEADER$§! เข้าร่วมจักรวรรดิของเรา"
  MESSAGE_ALL_GAINED_TRAIT_TITLE:0 "ผู้นำได้รับคุณลักษณะ"
@@ -639,15 +639,15 @@
  LEADER_CAPACITY_PENALTY:0 "ค่าบำรุงรักษาผู้นำของคุณเพิ่มขึ้น $UPKEEP$ และผู้นำได้รับค่าประสบการณ์น้อยลง $EXPERIENCE$ เนื่องจากจำนวนเกินขีดจำกัดผู้นำของคุณ"
  not_councilor_warning:0 "$TRIGGER_FAIL$ §Rคุณสมบัติของสภาจะมีผลก็ต่อเมื่อผู้นำได้รับการแต่งตั้งให้ดำรงตำแหน่งในสภาเท่านั้น§!"
  job_traits_on_ruler_warning:1 "$TRIGGER_FAIL$ §RSome effects might be disabled when the Leader is the Empire's Ruler.§!"
- councilor_subclass_tt:0 "§GVeteran Class focused on Councilor Traits§!"
- invader_subclass:0 "§GVeteran Class focused on invading enemy planets§!"
- protector_subclass:0 "§GVeteran Class focused on defending friendly systems§!"
- aggressor_subclass:0 "§GVeteran Class focused on ship damage output§!"
- tactician_subclass:0 "§GVeteran Class focused on survivability and specific ship types§!"
- pioneer_subclass:0 "§GVeteran Class focused on colonization and standard resources§!"
- economist_subclass:0 "§GVeteran Class focused on advanced resources§!"
- explorer_subclass:0 "§GVeteran Class focused on exploration§!"
- analyst_subclass:0 "§GVeteran Class focused on assisting planetary research§!"
+ councilor_subclass_tt:0 "§Gคลาสมีประสบการณ์โฟกัสที่คุณสมบัติสมาชิกสภา§!"
+ invader_subclass:0 "§Gคลาสมีประสบการณ์โฟกัสที่การบุกดาวเคราะห์ศัตรู§!"
+ protector_subclass:0 "§Gคลาสมีประสบการณ์โฟกัสที่การปกป้องระบบดาวที่เป็นพันธมิตร§!"
+ aggressor_subclass:0 "§Gคลาสมีประสบการณ์โฟกัสที่การเพิ่มดาเมจของยานรบ§!"
+ tactician_subclass:0 "§Gคลาสมีประสบการณ์โฟกัสที่ความอยู่รอดและประเภทยานโดยเฉพาะ§!"
+ pioneer_subclass:0 "§Gคลาสมีประสบการณ์โฟกัสที่การตั้งอาณานิคมและทรัพยากรพื้นฐาน§!"
+ economist_subclass:0 "§Gคลาสมีประสบการณ์โฟกัสที่ทรัพยากรขั้นสูง§!"
+ explorer_subclass:0 "§Gคลาสมีประสบการณ์โฟกัสการสำรวจ§!"
+ analyst_subclass:0 "§Gคลาสมีประสบการณ์โฟกัสเรื่องการช่วยเหลือการวิจัยดาวเคราะห์§!"
  leader_trait_adventurous_spirit:0 "Adventurous Spirit"
  leader_trait_adventurous_spirit_desc:1 "This leader has a yearning for adventure and an overt distaste for boardroom politics."
  leader_trait_adventurous_spirit_effect:1 "[GetAdventurousSpiritEffect]"
@@ -859,7 +859,7 @@
  leader_trait_irenic_desc:1 "This leader works obsessively to safeguard against perceived military overreach."
  subclass_scientist_explorer:0 "นักสำรวจ"
  subclass_scientist_explorer_desc:0 "To explore unknown worlds, catalog new species, and encounter new civilizations - this is the motto of every space explorer, and this leader is the embodiment of such an approach."
- subclass_scientist_explorer_effect:0 "$t$On Completing Survey:\n$tt$Generate §G+5§! £unity£ §Y$unity$§!"
+ subclass_scientist_explorer_effect:0 "$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$สร้าง §G+5§! £unity£ §Y$unity$§!"
  subclass_scientist_analyst:0 "นักวิเคราะห์"
  subclass_scientist_analyst_desc:0 "Being at the forefront of science, conducting experiments, and researching new technologies to better the empire is the main concern of any determined analyst."
  subclass_scientist_researcher:0 "นักวิจัย"
@@ -892,16 +892,16 @@
  leader_trait_archaeologist_3_desc:0 "$leader_trait_archaeologist_desc$"
  leader_trait_prospector:0 "นักสำรวจ"
  leader_trait_prospector_desc:1 "This leader has a set of self-built, powerful scanners, which can find even the deepest deposits when surveying galactic objects."
- leader_trait_prospector_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$On Completing Survey:\n$tt$Basic Resource Discovery Chance: §G+5%§!"
+ leader_trait_prospector_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$โอกาสค้นพบทรัพยากรพื้นฐาน: §G+5%§!"
  leader_trait_prospector_2:0 "$leader_trait_prospector$ II"
  leader_trait_prospector_2_desc:0 "$leader_trait_prospector_desc$"
- leader_trait_prospector_2_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$On Completing Survey:\n$tt$Basic Resource Discovery Chance: §G+10%§!"
+ leader_trait_prospector_2_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$โอกาสค้นพบทรัพยากรพื้นฐาน: §G+10%§!"
  leader_trait_observant:1 "นักสังเกตการณ์"
  leader_trait_observant_desc:1 "This leader has a set of self-built, powerful scanners, which can pick up on even the most obscure anomalies when surveying galactic objects."
- leader_trait_observant_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$On Completing Survey:\n$tt$Research Deposit Discovery Chance: §G+5%§!"
+ leader_trait_observant_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$โอกาสค้นพบแหล่งวิจัย: §G+5%§!"
  leader_trait_observant_2:0 "$leader_trait_observant$ II"
  leader_trait_observant_2_desc:0 "$leader_trait_observant_desc$"
- leader_trait_observant_2_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$On Completing Survey:\n$tt$Research Deposit Discovery Chance: §G+10%§!"
+ leader_trait_observant_2_effect:1 "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$โอกาสค้นพบแหล่งวิจัย: §G+10%§!"
  leader_trait_slippery:1 "นักหลบเลี่ยง"
  leader_trait_slippery_desc:1 "Exploring the unknown is a dangerous task. This leader upgraded [Root.GetHisHer] ship with additional fail-safe systems and automatic FTL-disengagement protocols."
  leader_trait_collective_wisdom:0 "Collective Wisdom"
@@ -1221,10 +1221,10 @@
  leader_trait_deep_space_explorer_desc:1 "Deep space exploration officers are assigned to survey the remotest corners of the galaxy. This leader is one such explorer, equipped with state-of-the-art technology to propel them into the unknown."
  leader_trait_xeno_cataloger:0 "Xeno Cataloger"
  leader_trait_xeno_cataloger_desc:1 "This leader is tasked with discovering, identifying, and cataloging all xeno lifeforms. The data is then assessed to determine any possible threats and future contamination protocols."
- leader_trait_xeno_cataloger_effect:1 "$t$On Completing Survey:\n$tt$Gain 3 months of £unity£§Y$unity$§! production"
+ leader_trait_xeno_cataloger_effect:1 "$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$ได้รับการผลิต £unity£§Y$unity$§! เป็นเวลา 3 เดือน"
  leader_trait_frontier_adventurer:0 "Frontier Adventurer"
  leader_trait_frontier_adventurer_desc:1 "Exploring new systems, finding new worlds, and discovering long-forgotten civilizations are the main concerns of any true adventurer. This leader is the very embodiment of this ideal, always on the lookout for lost knowledge or forgotten ruins."
- leader_trait_frontier_adventurer_effect:1 "$t$On Completing Survey:\n$tt$Gain 3 months of £society£§Y$society_research$§! production"
+ leader_trait_frontier_adventurer_effect:1 "$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$ได้รับการผลิต £society£§Y$society_research$§! เป็นเวลา 3 เดือน"
  leader_trait_brilliant_shipwright:0 "Brilliant Shipwright"
  leader_trait_brilliant_shipwright_desc:1 "With extensive knowledge and an innate understanding of shipbuilding, this leader is responsible not only for new technology but also for overseeing our shipyards."
  leader_trait_truth_seeker:0 "Truth Seeker"
