--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -4,8 +4,8 @@
  SECTOR_EDITOR_HELP:1 "§H$SECTOR_EDIT_VIEW$§!\nUsing the §H$SECTOR_EDIT_VIEW$§! you can freely add or remove any connected system that you own within range of the £sector_capital£§YSector Capital§!.\n$SEPARATOR$$SEPARATOR$$SEPARATOR$\n§EA sector will automatically expand to contain all systems within range that are not already part of a different sector when automatic expansion is enabled.§!"
  SECTOR_EDITOR_ADD_SYSTEMS:0 "เพิ่มระบบดาว"
  SECTOR_EDITOR_REMOVE_SYSTEMS:0 "ลบระบบดาว"
- SECTOR_EDITOR_AUTO_EXPAND_TEXT:0 "Auto Expand Sector"
- SECTOR_AUTO_EXPAND:0 "Toggle if the §YSector§! should automatically expand to contain new systems."
+ SECTOR_EDITOR_AUTO_EXPAND_TEXT:0 "ขยายเซ็กเตอร์อัตโนมัติ"
+ SECTOR_AUTO_EXPAND:0 "สลับถ้า§Yเซ็กเตอร์§!ควรขยายโดยอัตโนมัติเพื่อบรรจุระบบดาวใหม่"
  democratic_local_government:0 "Democratic Administration"
  oligarchic_local_government:0 "Oligarchic Government"
  dictatorial_local_government:0 "Dictatorial Commission"
