--- a/mod/thmod/localisation/english/paragon_triggers_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_triggers_l_english.yml
@@ -9,7 +9,7 @@
  HAS_UNLOCKED_COUNCIL_POSITIONS_VALUE_TRIGGER:0 "Unlocked Council Positions is $COMPARE$ $VALUE|Y$"
  COUNTRY_CAN_NOT_UNLOCK_MORE_COUNCIL_POSITIONS:0 "Requires more Civic Points"
  COUNTRY_CAN_UNLOCK_MORE_COUNCIL_POSITIONS:0 "Total Civic Points is greater than number of unlocked Council Positions"
- HAS_AGENDA_SELECTED_THIS:0 "Current Agenda is: $AGENDA$"
- HAS_AGENDA_SELECTED_OTHER:0 "Current Agenda is NOT: $AGENDA$"
+ HAS_AGENDA_SELECTED_THIS:0 "ตอนนี้แผนคือ: $AGENDA$"
+ HAS_AGENDA_SELECTED_OTHER:0 "ตอนนี้ไม่มีแผน: $AGENDA$"
  HAS_AGENDA_SELECTED_NO:0 "ตอนนี้ไม่มีแผน"
- HAS_AGENDA_SELECTED_YES:0 "Currently has an Agenda"
+ HAS_AGENDA_SELECTED_YES:0 "ตอนนี้มีแผน"
