--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -26,48 +26,48 @@
  pft_democratic_election_4:0 "$pft_democratic_election_1$"
  pft_democratic_election_4_desc:0 "$pft_democratic_election_1_desc$"
  SUPREMACIST_RULER_SAME_SPECIES:0 "[Root.Owner.GetSpeciesName] [Root.Owner.GetRulerTitle]"
- SUPREMACIST_RULER_NOT_SAME_SPECIES:0 "[Root.Owner.GetRulerTitle] is a Xeno"
- SUPREMACIST_RULER_NOT_SAME_SPECIES_DESC:0 "The [Root.GetName] want our Ruler to be of their species and will be angered by any non-[Root.Owner.GetSpeciesName] holding the position of [Root.Owner.GetRulerTitle]."
+ SUPREMACIST_RULER_NOT_SAME_SPECIES:0 "[Root.Owner.GetRulerTitle] เป็นพวกต่างดาว"
+ SUPREMACIST_RULER_NOT_SAME_SPECIES_DESC:0 "[Root.GetName] ต้องการให้ผู้ปกครองของเราเป็นเผ่าพันธุ์เดียวกับพวกเขา และจะโกรธเคืองเมื่อผู้ที่ไม่ใช่เผ่า [Root.Owner.GetSpeciesName] ดำรงตำแหน่ง [Root.Owner.GetRulerTitle]"
  SUPREMACIST_UNRESTRICTED_STUDY:0 "การศึกษาต่างดาวแบบล้วงล้ำ"
- SUPREMACIST_UNRESTRICTED_STUDY_DESC:1 "Exploiting primitive xeno civilizations to maximum effect by legislating for Active or Aggressive Native Interference will please the [Root.GetName]."
+ SUPREMACIST_UNRESTRICTED_STUDY_DESC:1 "การใช้ประโยชน์จากอารยธรรมต่างดาวดึกดำบรรพ์ ให้เกิดผลสูงสุดโดยการออกกฎหมายหรือนโยบายสำหรับการแทรกแซงแบบปกติหรือแบบรุกราน จะทำให้ [Root.GetName] พอใจ"
  SUPREMACIST_NO_UNRESTRICTED_STUDY:0 "$SUPREMACIST_UNRESTRICTED_STUDY$"
- SUPREMACIST_SLAVERY_ALLOWED:0 "Slave Potential"
- SUPREMACIST_SLAVERY_ALLOWED_DESC:0 "The [Root.GetName] do not believe that some are worth more than others, simply that some are more suited to certain tasks than others. Outlawing §YSlavery§! will displease them."
- SUPREMACIST_SLAVERY_OUTLAWED:0 "Slavery Outlawed"
- SUPREMACIST_HAS_ALIEN_SLAVES:0 "Access to Xeno Slaves"
- SUPREMACIST_NO_ALIEN_SLAVES:0 "Lack of Xeno Slaves"
+ SUPREMACIST_SLAVERY_ALLOWED:0 "ศักยภาพของทาส"
+ SUPREMACIST_SLAVERY_ALLOWED_DESC:0 "[Root.GetName] ไม่เชื่อว่าคนบางคนมีค่ามากกว่าคนอื่นๆ เพียงแต่ว่าบางคนอาจเหมาะสมกับงานบางอย่างมากกว่างานอื่น การออกกฎหมายให้มี §Yทาส§! ทำให้พวกเขาไม่พอใจ"
+ SUPREMACIST_SLAVERY_OUTLAWED:0 "การมีทาสเป็นสิ่งผิดกฎหมาย"
+ SUPREMACIST_HAS_ALIEN_SLAVES:0 "เข้าถึงทาสต่างดาว"
+ SUPREMACIST_NO_ALIEN_SLAVES:0 "ขาดทาสต่างดาว"
  SUPREMACIST_NO_FREE_ALIENS:1 "ต่างดาวไม่ได้รับสิทธิ์"
  SUPREMACIST_HAS_FREE_ALIENS:0 "$SUPREMACIST_NO_FREE_ALIENS$"
- SUPREMACIST_ALIEN_SLAVES_DESC:1 "Ensuring that no xeno species within our empire enjoys full citizenship rights will please the [Root.GetName]."
+ SUPREMACIST_ALIEN_SLAVES_DESC:1 "ตรวจสอบให้แน่ใจว่าไม่มีเผ่าพันธุ์ต่างดาวในจักรวรรดิของเราที่ได้รับสิทธิการเป็นพลเมืองเต็มรูปแบบ จะทำให้ [Root.GetName] พอใจ"
  SUPREMACIST_ALL_SLAVERY_ALLOWED:0 "[Root.Owner.GetSpeciesName] อนุญาตให้มีทาส"
- SUPREMACIST_ALL_SLAVERY_DESC:0 "The [Root.GetName] are angered by the notion of anyone enslaving a [Root.Owner.GetSpeciesName], and want slavery to be restricted to Xenos only."
- LEADER_IS_OWNER_SPECIES:0 "[Root.Owner.GetRulerTitle] is [Root.Owner.GetSpeciesName]"
+ SUPREMACIST_ALL_SLAVERY_DESC:0 "[Root.GetName] รู้สึกโกรธเคืองกับความคิดที่ว่าใครก็ตามที่ทำให้ [Root.Owner.GetSpeciesName] เป็นทาส และต้องการให้ทาสถูกจำกัดไว้แค่ต่างดาวเท่านั้น"
+ LEADER_IS_OWNER_SPECIES:0 "[Root.Owner.GetRulerTitle] เป็น [Root.Owner.GetSpeciesName]"
  SUPREMACIST_NO_MIGRATION_TREATIES:0 "ไม่มีการอพยพเข้ามา"
  SUPREMACIST_MIGRATION_TREATIES:0 "$SUPREMACIST_NO_MIGRATION_TREATIES$"
- SUPREMACIST_NO_MIGRATION_TREATIES_DESC:0 "Signing any §YMigration Treaties§! will displease the [Root.GetName]."
+ SUPREMACIST_NO_MIGRATION_TREATIES_DESC:0 "การลงนามใน §Yสนธิสัญญาการย้ายถิ่นฐาน§! จะทำให้ [Root.GetName] ไม่พอใจ"
  SUPREMACIST_CORE_WORLD_EXCLUSIVITY:0 "Core World Exclusivity"
  SUPREMACIST_CORE_WORLD_EXCLUSIVITY_DESC:0 "Reserving our empire's Core Worlds for the exclusive use of [Root.Owner.GetSpeciesNamePlural] and their slaves will please the [Root.GetName]."
  SUPREMACIST_CORE_WORLD_NONEXCLUSIVITY:0 "$SUPREMACIST_CORE_WORLD_EXCLUSIVITY$"
  SUPREMACIST_DOMINATION:0 "ยืนยันความมีอำนาจเหนือกว่า"
- SUPREMACIST_DOMINATION_DESC:0 "Declaring war against one or more xeno Empire(s) will please the [Root.GetName] for a time."
+ SUPREMACIST_DOMINATION_DESC:0 "การประกาศสงครามกับจักรวรรดิต่างดาวอย่างน้อยหนึ่งแห่งจะทำให้ [Root.GetName] พอใจชั่วขณะหนึ่ง"
  SUPREMACIST_NO_DOMINATION:0 "$SUPREMACIST_DOMINATION$"
- SUPREMACIST_GENE_MOD:0 "Genetic Purity"
- SUPREMACIST_GENE_MOD_DESC:2 "Ensuring that all [Root.Owner.GetSpeciesNamePlural] Pops have the exact same genetic traits will please [Root.GetName]."
- SUPREMACIST_IMPURE:0 "[Root.Owner.GetSpeciesAdj] Impurity"
- SUPREMACIST_NO_HARMONY:0 "Disharmony"
+ SUPREMACIST_GENE_MOD:0 "พันธุกรรมบริสุทธิ์"
+ SUPREMACIST_GENE_MOD_DESC:2 "ตรวจสอบให้แน่ใจว่าประชากร [Root.Owner.GetSpeciesNamePlural] ทั้งหมดมีลักษณะทางพันธุกรรมเหมือนกันทุกประการ จะทำให้ [Root.GetName] พอใจ"
+ SUPREMACIST_IMPURE:0 "[Root.Owner.GetSpeciesAdj] ไม่บริสุทธิ์"
+ SUPREMACIST_NO_HARMONY:0 "ไม่ปรองดอง"
  SUPREMACIST_HARMONY:0 "$SUPREMACIST_NO_HARMONY$"
- SUPREMACIST_NO_HARMONY_DESC:0 "Adopting Harmony Traditions alluding to the supposed equality of lesser species will displease the [Root.GetName]."
+ SUPREMACIST_NO_HARMONY_DESC:0 "ใช้วัฒนธรรมความปรองดอง การกล่าวถึงความเท่าเทียมกันของเผ่าพันธุ์ที่มีน้อยกว่า จะทำให้ [Root.GetName] ไม่พอใจ"
  SUPREMACIST_FANATIC_PURIFIERS:1 "$civic_fanatic_purifiers$"
  SUPREMACIST_NOT_FANATIC_PURIFIERS:1 "$civic_fanatic_purifiers$"
  SUPREMACIST_FANATIC_PURIFIERS_DESC:1 "$civic_fanatic_purifiers_desc$"
- SUPREMACIST_DOMINATION_TRADITION:0 "Traditional Domination"
+ SUPREMACIST_DOMINATION_TRADITION:0 "รับวัฒนธรรมการปกครอง"
  SUPREMACIST_NO_DOMINATION_TRADITION:1 "$SUPREMACIST_DOMINATION_TRADITION$"
- SUPREMACIST_DOMINATION_TRADITION_DESC:0 "Adopting any Traditions emphasizing §YDomination§! will please the [Root.GetName]."
+ SUPREMACIST_DOMINATION_TRADITION_DESC:0 "การยอมรับวัฒนธรรมใดๆ ที่เน้น §Yการปกครอง§! จะทำให้ [Root.GetName] พอใจ"
  SUPREMACIST_GIANT_MASSACRE:0 "การสังหารหมู่ยักษ์"
  SUPREMACIST_NO_GIANT_MASSACRE:0 "$SUPREMACIST_GIANT_MASSACRE$"
- SUPREMACIST_GIANT_MASSACRE_DESC:0 "Putting any of the gargantuan §YLeviathan§! xenos out of their misery will please the [Root.GetName] for a time."
+ SUPREMACIST_GIANT_MASSACRE_DESC:0 "การทำให้พวก §Yลิไวธาน§! ให้ออกจากความทุกข์ทรมาน จะทำให้ [Root.GetName] พอใจชั่วขณะหนึ่ง"
  SUPREMACIST_ISOLATIONIST_NO_FEDERATION:0 "เข้มแข็งแต่เพียงผู้เดียว"
- SUPREMACIST_ISOLATIONIST_NO_FEDERATION_DESC:1 "Allowing the [Root.Owner.GetName] to be exploited by alien interests by §Yjoining a Federation§! will displease the [Root.GetName]."
+ SUPREMACIST_ISOLATIONIST_NO_FEDERATION_DESC:1 "การอนุญาตให้ [Root.Owner.GetName] §Yเข้าร่วมสหพันธ์§! จะทำให้ [Root.GetName] ไม่พอใจ"
  SUPREMACIST_ISOLATIONIST_FEDERATION:1 "$SUPREMACIST_ISOLATIONIST_NO_FEDERATION$"
  SUPREMACIST_PROCLAIM_SUPREMACY:0 "ดูหมิ่นประวัติศาสตร์"
  SUPREMACIST_NO_PROCLAIM_SUPREMACY:0 "$SUPREMACIST_PROCLAIM_SUPREMACY$"
@@ -110,25 +110,25 @@
  XENOIST_NO_RECENT_ENLIGHTENMENT:0 "$XENOIST_RECENT_ENLIGHTENMENT$"
  XENOIST_DIPLOMACY_TRADITION:1 "วัฒนธรรม[Root.GetDiplomacyTraditionName]"
  XENOIST_NO_DIPLOMACY_TRADITION:0 "$XENOIST_DIPLOMACY_TRADITION$"
- XENOIST_DIPLOMACY_TRADITION_DESC:1 "Adopting §Y[Root.GetDiplomacyTraditionName]§! traditions will please the [Root.GetName]."
- XENOIST_PRE_SAPIENT_SURVIVAL:0 "การอยู่รอดของเผ่าพันธุ์ก่อนมีสติปัญญา"
+ XENOIST_DIPLOMACY_TRADITION_DESC:1 "การใช้วัฒนธรรม §Y[Root.GetDiplomacyTraditionName]§! จะทำให้ [Root.GetName] พอใจ"
+ XENOIST_PRE_SAPIENT_SURVIVAL:0 "การอยู่รอดของเผ่าพันธุ์ดึกดำบรรพ์"
  XENOIST_NO_PRE_SAPIENT_SURVIVAL:0 "$XENOIST_PRE_SAPIENT_SURVIVAL$"
- XENOIST_PRE_SAPIENT_SURVIVAL_DESC:0 "Failing to legislate for the survival of pre-sapient species will displease the [Root.GetName]."
+ XENOIST_PRE_SAPIENT_SURVIVAL_DESC:0 "การไม่ออกกฎหมายเพื่อความอยู่รอดของเผ่าพันธุ์ Pre-FTL จะทำให้ [Root.GetName] ไม่พอใจ"
  XENOIST_NO_PRIMITIVE_INVASION:0 "คัดค้านการฉกฉวยที่ดิน"
  XENOIST_PRIMITIVE_INVASION:0 "$XENOIST_NO_PRIMITIVE_INVASION$"
- XENOIST_NO_PRIMITIVE_INVASION_DESC:1 "Outright invading pre-FTL worlds will displease the [Root.GetName]."
+ XENOIST_NO_PRIMITIVE_INVASION_DESC:1 "การบุกดาวอารยธรรมดึกดำบรรพ์ pre-FTL จะทำให้ [Root.GetName] ไม่พอใจ"
  XENOIST_FEDERATED:0 "สหพันธ์"
  XENOIST_NOT_FEDERATED:0 "$XENOIST_FEDERATED$"
- XENOIST_FEDERATED_DESC:0 "Joining a §YFederation§! will please the [Root.GetName]."
+ XENOIST_FEDERATED_DESC:0 "เข้าร่วม §Yสหพันธ์§! จะทำให้ [Root.GetName] พอใจ"
  XENOIST_RECENT_COMMS:0 "การติดต่อใหม่ๆ"
  XENOIST_NO_RECENT_COMMS:0 "$XENOIST_RECENT_COMMS$"
- XENOIST_RECENT_COMMS_DESC:1 "Establishing communications with other civilizations will please the [Root.GetName] for a time."
- XENOIST_CELEBRATE_DIVERSITY:0 "Celebrate Diversity"
+ XENOIST_RECENT_COMMS_DESC:1 "สร้างการสื่อสารกับอารยธรรมอื่นๆ จะทำให้ [Root.GetName] พอใจชั่วระยะเวลาหนึ่ง"
+ XENOIST_CELEBRATE_DIVERSITY:0 "เฉลิมฉลองความหลากหลาย"
  XENOIST_NO_CELEBRATE_DIVERSITY:0 "$XENOIST_CELEBRATE_DIVERSITY$"
- XENOIST_CELEBRATE_DIVERSITY_DESC:0 "Celebrating the diversity of life in the universe by showcasing Minor Artifacts will please the [Root.GetName] for a time."
+ XENOIST_CELEBRATE_DIVERSITY_DESC:0 "การเฉลิมฉลองความหลากหลายของสิ่งมีชีวิตในจักรวาลด้วยการจัดแสดงศิลปวัตถุชั้นรอง (Minor Artifact) จะทำให้ [Root.GetName] พอใจอยู่ระยะหนึ่ง"
  XENOIST_PROCLAIM_SUPREMACY:0 "ประกาศความเหนือกว่า"
  XENOIST_NO_PROCLAIM_SUPREMACY:0 "$XENOIST_PROCLAIM_SUPREMACY$"
- XENOIST_PROCLAIM_SUPREMACY_DESC:0 "Destroying Minor Artifacts to rally xenophobes will displease the [Root.GetName] for a time."
+ XENOIST_PROCLAIM_SUPREMACY_DESC:0 "การทำลายศิลปวัตถุชั้นรองเพื่อเพิ่มความเกลียดกลัวชาวต่างดาวจะทำให้ [Root.GetName] ไม่พอใจอยู่ระยะหนึ่ง"
  XENOIST_PROACTIVE_FIRST_CONTACT_POLICY:0 "ภาษาที่ใช้ในการติดต่อครั้งแรกแบบการทูตเชิงรุก"
  XENOIST_ADOPT_PROACTIVE_FIRST_CONTACT_POLICY:0 "$XENOIST_PROACTIVE_FIRST_CONTACT_POLICY$"
  XENOIST_PROACTIVE_FIRST_CONTACT_POLICY_DESC:0 "Enshrining a peaceful and §Yproactive§! approach to establishing first contact into our law codes will please the [Root.GetName] in this age of exploration."
@@ -154,17 +154,17 @@
  IMPERIALIST_FRONTIER_OUTPOSTS_DESC:1 "Constructing a §YFrontier Outpost§! to expand our territory will please the [Root.GetName] for a time."
  IMPERIALIST_NO_RECENT_FRONTIER_OUTPOSTS:0 "$IMPERIALIST_FRONTIER_OUTPOSTS$"
  IMPERIALIST_RIVALS1:0 "การแข่งขันในท้องถิ่น"
- IMPERIALIST_RIVALS_DESC1:1 "Positioning ourselves as the Rival of at least §Y1 Empire§! will please the [Root.GetName]."
+ IMPERIALIST_RIVALS_DESC1:1 "เป็นคู่แข่งกับจักรวรรดิอื่นอย่างน้อย §Y1 จักรวรรดิ§! จะทำให้ [Root.GetName] พอใจ"
  IMPERIALIST_FEW_RIVALS1:0 "$IMPERIALIST_RIVALS1$"
  IMPERIALIST_RIVALS2:0 "การแข่งขันในพื้นที่ใกล้เคียง"
- IMPERIALIST_RIVALS_DESC2:1 "Positioning ourselves as the Rival of at least §Y2 Empires§! will please the [Root.GetName]."
+ IMPERIALIST_RIVALS_DESC2:1 "เป็นคู่แข่งกับจักรวรรดิอื่นอย่างน้อย §Y2 จักรวรรดิ§! จะทำให้ [Root.GetName] พอใจ"
  IMPERIALIST_FEW_RIVALS2:0 "$IMPERIALIST_RIVALS2$"
  IMPERIALIST_RIVALS3:0 "นักเลงแห่งกาแล็กติก"
- IMPERIALIST_RIVALS_DESC3:1 "Positioning ourselves as the Rival of at least §Y3 Empires§! will please the [Root.GetName]."
+ IMPERIALIST_RIVALS_DESC3:1 "เป็นคู่แข่งกับจักรวรรดิอื่นอย่างน้อย §Y3 จักรวรรดิ§! จะทำให้ [Root.GetName] พอใจ"
  IMPERIALIST_FEW_RIVALS3:0 "$IMPERIALIST_RIVALS3$"
  IMPERIALIST_OVERLORD:0 "จักรวรรดิมหาอำนาจ"
  IMPERIALIST_NOT_OVERLORD:0 "$IMPERIALIST_OVERLORD$"
- IMPERIALIST_OVERLORD_DESC:0 "Installing ourselves as the §YOverlord§! of one or more foreign powers will please the [Root.GetName]."
+ IMPERIALIST_OVERLORD_DESC:0 "ตั้งตนเป็น §Yเจ้าเหนือหัว§! ของจักรวรรดิอื่นอย่างน้อยหนึ่งจักรวรรดิอำนาจ จะทำให้ [Root.GetName] พอใจ"
  IMPERIALIST_SUPREMACY_TRADITION:0 "Traditional Supremacy"
  IMPERIALIST_NO_SUPREMACY_TRADITION:0 "$IMPERIALIST_SUPREMACY_TRADITION$"
  IMPERIALIST_SUPREMACY_TRADITION_DESC:0 "Adopting any Traditions emphasizing §YSupremacy§! will please the [Root.GetName]."
@@ -310,7 +310,7 @@
  TECHNOLOGIST_ROBOTS_DESC:0 "Maintaining a population of at least §Y6§! Robotic Pops will please the [Root.GetName]."
  TECHNOLOGIST_FEW_ROBOTS:0 "$TECHNOLOGIST_ROBOTS$"
  TECHNOLOGIST_ROBOTS_ALLOWED:0 "อนุญาตให้ใช้ AI"
- TECHNOLOGIST_ROBOTS_ALLOWED_DESC:1 "Allowing the development and study of Robotics and Artificial Intelligence"
+ TECHNOLOGIST_ROBOTS_ALLOWED_DESC:1 "ยอมให้มีการพัฒนาและศึกษาวิทยาการหุ่นยนต์และปัญญาประดิษฐ์"
  TECHNOLOGIST_ROBOTS_BANNED:0 "AI ผิดกฎหมาย"
  TECHNOLOGIST_TECH_LEAP:0 "พัฒนาเทคโนโลยีระดับแนวหน้า"
  TECHNOLOGIST_TECH_LEAP_DESC:0 "[Root.GetName] ไม่ยอมให้จักรวรรดิอื่นมีระดับเทคโนโลยี §Yเทียบเท่า§!"
@@ -387,9 +387,9 @@
  TOTALITARIAN_STRONG_ARMY:0 "Military Discipline"
  TOTALITARIAN_STRONG_ARMY_DESC:0 "Maintaining at least §Y6§! Armies of any type on all [Root.Owner.GetAdj] worlds inhabited by 6 or more Pops will please the [Root.GetName]."
  TOTALITARIAN_WEAK_ARMY:0 "$TOTALITARIAN_STRONG_ARMY$"
- TOTALITARIAN_DOMINATION:0 "Traditional Domination"
+ TOTALITARIAN_DOMINATION:0 "รับวัฒนธรรมการปกครอง"
  TOTALITARIAN_NO_DOMINATION:0 "$TOTALITARIAN_DOMINATION$"
- TOTALITARIAN_DOMINATION_DESC:0 "Adopting §YDomination traditions§! will please the [Root.GetName]."
+ TOTALITARIAN_DOMINATION_DESC:0 "เลือกใช้ §Yวัฒนธรรมการปกครอง§! จะทำให้ [Root.GetName] พอใจ"
  TOTALITARIAN_EXTRANATIONAL_AUTHORITY:0 "มีอำนาจในโลกอื่น"
  TOTALITARIAN_NO_EXTRANATIONAL_AUTHORITY:0 "$TOTALITARIAN_EXTRANATIONAL_AUTHORITY$"
  TOTALITARIAN_EXTRANATIONAL_AUTHORITY_DESC:0 "ขยายอิทธิพลของเราเพื่อครอบงำ §Yรัฐบริวารอื่น§! จะทำให้ [Root.GetName] ชอบ"
