--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -160,7 +160,7 @@
  IS_NOT_HOMEWORLD:0 "Is NOT the Homeworld of an Empire"
  HAS_ANY_SECTOR_FOCUS:0 "Is in a sector with a focus"
  HAS_NOT_ANY_SECTOR_FOCUS:0 "Is not in a sector with a focus"
- HAS_GROUND_COMBAT:0 "Has ground combat"
+ HAS_GROUND_COMBAT:0 "มีการรบภาคพื้นดิน"
  HAS_NOT_GROUND_COMBAT:0 "ไม่มีการรบภาคพื้นดิน"
  IS_AT_WAR:0 "อยู่ในภาวะสงคราม"
  IS_NOT_AT_WAR:0 "ไม่ได้อยู่ในภาวะสงคราม"
@@ -357,7 +357,7 @@
  HAS_NOT_BUILDING:0 "ไม่มีสิ่งปลูกสร้าง: $BUILDING|Y$"
  HAS_ACTIVE_BUILDING:0 "Has Enabled Building: $BUILDING|Y$"
  HAS_NOT_ACTIVE_BUILDING:0 "Does NOT Have Enabled Building: $BUILDING|Y$"
- HAS_DISTRICT:0 "Has District: $DISTRICT|Y$"
+ HAS_DISTRICT:0 "มีเขต: $DISTRICT|Y$"
  HAS_NOT_DISTRICT:0 "ไม่มีเขต: $DISTRICT|Y$"
  HAS_BUILDING_CONSTRUCTION:0 "Has construction of building: $BUILDING|Y$"
  HAS_NOT_BUILDING_CONSTRUCTION:0 "ไม่มีการก่อสร้าง: $BUILDING|Y$"
@@ -626,8 +626,8 @@
  MEGASTRUCTURE_NOT_BUILT_ON_PLANET:0 "$SCOPE_NAME|Y$ is NOT built on a planet"
  POP_FACTION_MILITANCY_NOT_TRIGGER:0 "Militancy is NOT $COMPARE$ $VAL0|0Y%$"
  POP_FACTION_MILITANCY_TRIGGER:0 "Militancy is $COMPARE$ $VAL0|0Y$%"
- POP_FACTION_SUPPORT_NOT_TRIGGER:0 "Support is NOT $COMPARE$ $VAL0|0Y%$"
- POP_FACTION_SUPPORT_TRIGGER:0 "Support is $COMPARE$ $VAL0|0Y%$"
+ POP_FACTION_SUPPORT_NOT_TRIGGER:0 "การสนับสนุน ไม่$COMPARE$ $VAL0|0Y%$"
+ POP_FACTION_SUPPORT_TRIGGER:0 "การสนับสนุน $COMPARE$ $VAL0|0Y%$"
  ALLIANCE_NOT_TRIGGER:0 "ไม่มีสมาชิกพันธมิตร $COMPARE$ $VAL0|0Y%$"
  ALLIANCE_TRIGGER:0 "มีสมาชิกพันธมิตร $COMPARE$ $VAL0|0Y%$"
  VASSAL_NOT_TRIGGER:0 "ไม่มีบริวาร $COMPARE$ $VAL0|0Y%$"
@@ -1206,7 +1206,7 @@
  DEACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is removed"
  BEGIN_EVENT_CHAIN_EFFECT:1 "Begins the $NAME$ Event Chain.\n\n"
  END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME$ Event Chain.\n\n"
- SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ shifts its ethics towards $ETHIC|Y$\n"
+ SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ มีแนวโน้มหลักจริยธรรมไปทาง $ETHIC|Y$\n"
  CHANGE_BACKGROUND_ETHIC:0 "Change Leader Ethic to $ETHIC|Y$"
  SET_COUNCIL_POSITION_EFFECT:0 "กำหนดผู้นำให้กับสภาในตำแหน่ง $POSITION|Y$"
  ADD_ETHIC_EFFECT:0 "\nได้รับจริยธรรม $ETHIC|Y$\n"
@@ -1926,8 +1926,8 @@
  effect_every_archaeological_site:1 "ทุกแหล่งโบราณคดี"
  AWARENESS_TRIGGER:0 "Awareness is $COMPARE$ $VALUE|Y$"
  AWARENESS_NOT_TRIGGER:0 "Awareness is NOT $COMPARE$ $VALUE|Y$"
- AWARENESS_STAGE_TRIGGER:0 "Awareness level is $COMPARE$ $STAGE|Y$"
- AWARENESS_STAGE_NOT_TRIGGER:0 "Awareness level is NOT $COMPARE$ $STAGE|Y$"
+ AWARENESS_STAGE_TRIGGER:0 "ระดับการรับรู้ $COMPARE$ $STAGE|Y$"
+ AWARENESS_STAGE_NOT_TRIGGER:0 "ระดับการรับรู้ ไม่$COMPARE$ $STAGE|Y$"
  TRIGGER_IS_UNDER_SOCIETAL_ENLIGHTENMENT:1 "Is receiving Societal Guidance from $TARGET|Y$"
  TRIGGER_IS_NOT_UNDER_SOCIETAL_ENLIGHTENMENT:1 "Is not receiving Societal Guidance from $TARGET|Y$"
  TRIGGER_IS_UNDER_OPEN_TECHNOLOGICAL_ENLIGHTENMENT:0 "Is receiving technology from $TARGET|Y$"
