--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -74,7 +74,7 @@
  IS_NOT_FACTION_TYPE_TRIGGER:0 "Is NOT faction type $TYPE$"
  NOT_XENO_COMPATIBILITY_ENABLED_TRIGGER:0 "ปิดความเข้ากันได้ของชาวต่างดาว"
  XENO_COMPATIBILITY_ENABLED_TRIGGER:0 "เปิดความเข้ากันได้ของชาวต่างดาว"
- ADD_DEPOSIT_EFFECT_FULL:1 "Add $DEPOSIT|Y$ to $PLANET|Y$\n$EFFECT$\n"
+ ADD_DEPOSIT_EFFECT_FULL:1 "เพิ่ม $DEPOSIT|Y$ ที่ $PLANET|Y$\n$EFFECT$\n"
  HAS_SPECIAL_PROJECT:0 "มีโครงการพิเศษ $SPECIAL_PROJECT$"
  HAS_NOT_SPECIAL_PROJECT:0 "ไม่มีโครงการพิเศษ $SPECIAL_PROJECT$"
  HAS_COMPLETED_SPECIAL_PROJECT:0 "เสร็จสิ้นโครงการพิเศษ $SPECIAL_PROJECT$"
