--- a/mod/thmod/localisation/english/social_gui_l_english.yml
+++ b/mod/thmod/localisation/english/social_gui_l_english.yml
@@ -4,8 +4,8 @@
  SOCIAL_ADDFRIEND_WINDOW:0 "Add a Friend"
  SOCIAL_ADDFRIEND_WINDOW_ADD:0 "Add Friend"
  SOCIAL_ADDFRIEND_WINDOW_SEARCH:0 "Search"
- SOCIAL_STATUS_AVAILABLE:0 "Available"
- SOCIAL_STATUS_UNAVAILABLE:0 "Unavailable"
+ SOCIAL_STATUS_AVAILABLE:0 "ใช้ได้"
+ SOCIAL_STATUS_UNAVAILABLE:0 "ใช้ไม่ได้"
  SOCIAL_STATUS_OFFLINE:0 "Offline"
  SOCIAL_STATUS_DO_NOT_DISTURB:0 "Do not disturb"
  SOCIAL_STATUS_AWAY:0 "Away"
